# casablanca

./: README.md  config.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  scorecard.yml  tests.yml
casablanca/: __init__.py  cli.py  client.py  conf.py  logconf.py  manager.py
casablanca/api/: api.yaml
casablanca/example/: __init__.py  cli.py
casablanca/example/tests/: example_test.py
casablanca/tests/: cli_test.py  client_test.py  common_api_tests.py  conf_test.py  lib_test.py  manager_test.py
container_tests/: container_test.py
feature_tests/: service_test.py
tests/e2e/: client_test.py
