[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'casablanca'
version = '0.0.0'
description = 'Record and replay tool for RabbitMQ '
authors = [
    {name='Lundy Bernard', email='lundy.bernard@gmail.com'},
]
license = {file = 'LICENSE'}
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    'batconf',
    'pika',
]
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Free Threading',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Operating System :: OS Independent',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
]


[project.urls]
'Documentation' = 'https://casablanca.readthedocs.io/en/latest/'
'Source Code' = 'https://github.com/lundybernard/casablanca/'


[dependency-groups]
build = [
    'hatch',
    'twine',
]
dev = [
    'coverage',
    'flake8',
    'mypy',
    'pytest',
    'pytest-cov',
    'types-requests',
    'types-PyYAML',
    'testcontainers',
]
docs = [
    'sphinx',
    'sphinx_autodoc_typehints',
    'sphinx_design',
    'sphinxext-opengraph',
    'sphinx-rtd-theme',
    'matplotlib', # for social preview cards
    'myst_parser',
]


[project.scripts]
casablanca = 'casablanca.cli:BATCLI'


# === Testing === #
[tool.pytest.ini_options]
log_level = 'INFO'
addopts = '--cov=casablanca --cov-report=term --cov-report=xml'
python_classes = '*Tests'
python_files = ['*_test.py', '*_pytest.py']

[tool.coverage.report]
fail_under = 100
skip_covered = true
show_missing = true
skip_empty = true
omit = [
    "casablanca/tests/common_api_tests.py",
]

# === Type Checking === #
[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

# === Formatting === #
[tool.flake8]
max-line-length = '79'
max-complexity = 10

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
ignore = ['F401']
